[project]
name = "bot-wuzzler"
version = "0.1.0"
description = ""
authors = [
    {name = "Marius Tricolici",email = "antonio-marius.tricolici@prolion.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt (>=1.23.0,<2.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
